--- a/build.gradle
+++ b/build.gradle
@@ -45,18 +45,20 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-    compile "org.slf4j:slf4j-api:$slf4j_version"
-    compile "com.github.devcsrj:slf4j-okhttp3-logging-interceptor:$slf4j_okhttp_version"
+//    implementation 'com.microsoft.signalr:signalr:1.0.0'
 
-    compile "com.squareup.okhttp3:okhttp-urlconnection:$okhttp_version"
-    compile "com.squareup.retrofit2:retrofit:$retrofit_version"
-    compile "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
-    compile "com.squareup.retrofit2:converter-gson:$retrofit_version"
+    implementation "org.slf4j:slf4j-api:$slf4j_version"
+    implementation "com.github.devcsrj:slf4j-okhttp3-logging-interceptor:$slf4j_okhttp_version"
 
-    compile "net.donky:donky-signalr:$signalr_version"
-    compile "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
+    implementation "com.squareup.okhttp3:okhttp-urlconnection:$okhttp_version"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+    implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
+
+    implementation "net.donky:donky-signalr:$signalr_version"
+    implementation "io.reactivex.rxjava2:rxkotlin:$rxkotlin_version"
 
     testCompile "junit:junit:$junit_version"
     testCompile "org.assertj:assertj-core:$assertj_version"
